--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This CLI application uses Node and MySQL to allow a user to view and manage departments, roles, and employees in a company",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
