--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^4.1.0",
     "console.table": "^0.10.0",
     "express": "^4.17.1",
+    "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "mysql2": "^2.2.5"
   }
